--- a/BingChilling/Running.html
+++ b/BingChilling/Running.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=2, initial-scale=1.0">
     <title>Running JS Soulution</title>    
-    <script>scr="Running.js"</script>
+    <script scr="Running.js"> </script>
 </head>
 <body>
     
