I tried to no avail

--- a/coolspics/index.html
+++ b/coolspics/index.html
@@ -10,10 +10,10 @@
 <body>
     <header>
         <h1>Cool Pics 📷</h1>
-        <button type="Menu">Click Me!</button>
-        <nav>
+        <button class="menu-button" type="button">Menu</button>
+        <nav class="menu hide">
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="#">Home </a></li>
                 <li><a href="#">People</a></li>
                 <li><a href="#">Places</a></li>
                 <li><a href="#">about</a></li>
@@ -29,7 +29,7 @@
         <img src="norris-full.jpeg" alt="Big picutre" class = "picture">
         <img src="norris-full.jpeg" alt="Big picutre" class = "picture">
         <img src="norris-full.jpeg" alt="Big picutre" class = "picture">
-        <img src="norris-sm.jpeg" alt="Small picutre" class = "smull">
+        <img src="norris-full.jpeg" alt="Big Picture" class = "picture">
 
     </main>
     <footer>
