--- a/coolspics/index.html
+++ b/coolspics/index.html
@@ -36,6 +36,6 @@
         ©<span id="year"></span> Not a real site 😀
     </footer>
     
-    <script scr="coolpics.js"></script>
+    <script src="coolpics.js"></script>
 </body>
 </html>
