--- a/BookWebsite/bookwebsite.html
+++ b/BookWebsite/bookwebsite.html
@@ -10,8 +10,8 @@
 <body>
     
 
-    <header>
-        <h1>Kids Bookns n Stuff</h1>
+    <header id = "main-header">
+        <h1>Kids Books</h1>
     </header>
         <nav>
             <ul>
@@ -21,7 +21,14 @@
         
             </ul>
         </nav>
-    <main>
+    <main class = "grid-container">
+        <div id = "filter-section">
+            <h2>Filter Options</h2>
+            <p>Greg</p>
+            <p>Greg</p>
+            <p>Greg</p>
+            <p>Greg</p>
+        </div>
         <div id="articles-container"></div>
 
     </main>
