--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 </head>
 <body>
     <h1>Brian Ritchie</h1>
-    <h2>Bing chilasdasddsadling</h2>
-    <li><a href="CreditCard/index.html">Achive</a></li>
+    <li><a href="CreditCard/index.html">Credit Card</a></li>
 </body>
 </html>
