--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <body>
     <h1>Brian Ritchie</h1>
     <li><a href="CreditCard/index.html">Credit Card</a></li>
+    <li><a href="Week8/index.html">Register</a></li>
 </body>
 </html>
