--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <h1>Brian Ritchie</h1>
     <li><a href="CreditCard/index.html">Credit Card</a></li>
     <li><a href="Week8/index.html">Register</a></li>
-    <li><a href="Recipe Book/recipe.html">Recipe Book</a></li>
+    <li><a href="Recipe Book/index.html">Recipe Book</a></li>
 </body>
 </html>
