--- a/finalwebsite/index.html
+++ b/finalwebsite/index.html
@@ -22,15 +22,17 @@
     <main>
         
 
-        <!-- Meme details will be displayed here -->
         <div id="meme-details"></div>
     </main>
     
     <footer>
+        <div class="links">
+            <li><a href="missionstatement.html">Home</a></li>
+
+        </div>
         <p>Copyright Brian Ritchie 2024</p>
     </footer>
 
-    <!-- Include the modules -->
     <script type="module" src="final.js"></script>
 </body>
 </html>
