added site plan details

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <li><a href="CreditCard/index.html">Credit Card</a></li>
     <li><a href="Week8/index.html">Register</a></li>
     <li><a href="Recipe Book/index.html">Recipe Book</a></li>
+    <li><a href="finalwebsite template/index.html">Final Website Template</a></li>
     <li><a href="finalwebsite/index.html">Final Website</a></li>
 
 </body>
