Alt tags and stuff

--- a/finalwebsite/index.html
+++ b/finalwebsite/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <header>
-        <img src="images/logo.png" class="logo">
+        <meta name = "logo" content="This is a ai logo">
+        <img src="images/logo.png" class="logo" alt="logo">
         <h1>Memeology</h1>
         <div class="filter">
             <label for="sort">Sort:</label>
@@ -18,21 +19,15 @@
             </select>
         </div>
     </header>
-
     <main>
-        
-
         <div id="meme-details"></div>
     </main>
-    
     <footer>
         <div class="links">
             <li><a href="missionstatement.html">Home</a></li>
-
         </div>
         <p>Copyright Brian Ritchie 2024</p>
     </footer>
-
     <script type="module" src="final.js"></script>
 </body>
 </html>
