--- a/finalwebsite/index.html
+++ b/finalwebsite/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="Memeology" content="A website filled to the brim with memes and such, their desciptions, good for people to learn about memes">
     <title>Memeology</title>
     <link rel="stylesheet" href="final.css">
 </head>
@@ -24,7 +25,10 @@
     </main>
     <footer>
         <div class="links">
-            <li><a href="missionstatement.html">Home</a></li>
+            <ul>
+                <li><a href="missionstatement.html">Home</a></li>
+            </ul>
+            
         </div>
         <p>Copyright Brian Ritchie 2024</p>
     </footer>
