--- a/finalwebsite/missionstatement.html
+++ b/finalwebsite/missionstatement.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="interesting" content="width=device-width, initial-scale=1.0">
     <title>Memeology</title>
     <link rel="stylesheet" href="ms.css">
@@ -24,7 +25,9 @@
     </main>
     <footer>
         <div class="links">
-            <li><a href="index.html">Home</a></li>
+            <ui>
+                 <li><a href="index.html">Home</a></li>
+            </ui>
         </div>
         <p>Copyright Brian Ritchie 2024</p>
     </footer>
