--- a/finalwebsite/index.html
+++ b/finalwebsite/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="Memeology" content="A website filled to the brim with memes and such, their desciptions, good for people to learn about memes">
+    <meta name="desciption" content="A website filled to the brim with memes and such, their desciptions, good for people to learn about memes">
+    <meta name="author" content="Brian Ritchie">
+    <meta name="keywords" content="HTML, CSS, JavaScript">
+
     <title>Memeology</title>
     <link rel="stylesheet" href="final.css">
 </head>
