--- a/finalwebsite/missionstatement.html
+++ b/finalwebsite/missionstatement.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="interesting" content="width=device-width, initial-scale=1.0">
+    <meta name="desciption" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Brian Ritchie">
+    <meta name="keywords" content="HTML, CSS, JavaScript">
+
     <title>Memeology</title>
     <link rel="stylesheet" href="ms.css">
 </head>
@@ -25,7 +28,7 @@
     <footer>
         <div class="links">
             <ul>
-                 <li><a href="index.html">Home</a></li>
+                 <li><a href="index.html">All Memes</a></li>
             </ul>
         </div>
         <p>Copyright Brian Ritchie 2024</p>
