--- a/finalwebsite/missionstatement.html
+++ b/finalwebsite/missionstatement.html
@@ -3,17 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="desciption" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="A website providing detailed information and explanations about various memes.">
     <meta name="author" content="Brian Ritchie">
-    <meta name="keywords" content="HTML, CSS, JavaScript">
+    <meta name="keywords" content="memes, funny images, meme descriptions, internet culture">
 
-    <title>Memeology</title>
+    <title>Memeology Mission Statement</title>
     <link rel="stylesheet" href="ms.css">
 </head>
 <body>
     <header>
-        <meta name = "logo" content="This is a ai logo">
-        <img src="images/logo.png" class="logo" alt="logo">
+        <img src="images/logo.png" class="logo" alt="Memeology logo">
         <h1>Memeology</h1>
     </header>
     <main>
@@ -21,9 +20,12 @@
         <div class="meme-selection">
             <label for="meme-number">Select Meme by Number:</label>
             <select id="meme-number">
+                <!-- Meme options will be dynamically inserted here -->
             </select>
         </div>
-        <div id="meme-details"></div>
+        <div id="meme-details">
+            <!-- Meme details will be dynamically inserted here -->
+        </div>
     </main>
     <footer>
         <div class="links">
@@ -31,7 +33,7 @@
                  <li><a href="index.html">All Memes</a></li>
             </ul>
         </div>
-        <p>Copyright Brian Ritchie 2024</p>
+        <p>&copy; Brian Ritchie 2024</p>
     </footer>
     <script type="module" src="mainjs.js"></script>
 </body>
