--- a/finalwebsite/index.html
+++ b/finalwebsite/index.html
@@ -3,17 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="desciption" content="A website filled to the brim with memes and such, their desciptions, good for people to learn about memes">
+    <meta name="description" content="A website filled to the brim with memes and their descriptions, perfect for learning about memes">
     <meta name="author" content="Brian Ritchie">
-    <meta name="keywords" content="HTML, CSS, JavaScript">
-
+    <meta name="keywords" content="memes, funny images, meme descriptions, internet culture">
     <title>Memeology</title>
     <link rel="stylesheet" href="final.css">
 </head>
 <body>
     <header>
-        <meta name = "logo" content="This is a ai logo">
-        <img src="images/logo.png" class="logo" alt="logo">
+        <img src="images/logo.png" class="logo" alt="Memeology logo">
         <h1>Memeology</h1>
         <div class="filter">
             <label for="sort">Sort:</label>
@@ -24,16 +22,17 @@
         </div>
     </header>
     <main>
-        <div id="meme-details"></div>
+        <div id="meme-details">
+            <!-- Meme details will be dynamically inserted here -->
+        </div>
     </main>
     <footer>
         <div class="links">
             <ul>
                 <li><a href="missionstatement.html">Home</a></li>
             </ul>
-            
         </div>
-        <p>Copyright Brian Ritchie 2024</p>
+        <p>&copy; Brian Ritchie 2024</p>
     </footer>
     <script type="module" src="final.js"></script>
 </body>
