--- a/finalwebsite/index.html
+++ b/finalwebsite/index.html
@@ -3,37 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="A website filled to the brim with memes and their descriptions, perfect for learning about memes">
+    <meta name="description" content="A website providing detailed information and explanations about various memes.">
     <meta name="author" content="Brian Ritchie">
     <meta name="keywords" content="memes, funny images, meme descriptions, internet culture">
-    <title>Memeology</title>
-    <link rel="stylesheet" href="final.css">
+
+    <title>Memeology Mission Statement</title>
+    <link rel="stylesheet" href="ms.css">
 </head>
 <body>
     <header>
         <img src="images/logo.png" class="logo" alt="Memeology logo">
         <h1>Memeology</h1>
-        <div class="filter">
-            <label for="sort">Sort:</label>
-            <select id="sort">
-                <option value="number">Number</option>
-                <option value="alphabetical">Alphabetical</option>
-            </select>
-        </div>
     </header>
     <main>
+        <p class="mission-statement">The point of this website is to help those who would like to be informed on memes. This includes instances of the memes themselves as well as a written explanation for easy viewing.</p>
+        <div class="meme-selection">
+            <label for="meme-number">Select Meme by Number:</label>
+            <select id="meme-number">
+            </select>
+        </div>
         <div id="meme-details">
-            <!-- Meme details will be dynamically inserted here -->
         </div>
     </main>
     <footer>
         <div class="links">
             <ul>
-                <li><a href="missionstatement.html">Home</a></li>
+                 <li><a href="index2.html">All Memes</a></li>
             </ul>
         </div>
         <p>&copy; Brian Ritchie 2024</p>
     </footer>
-    <script type="module" src="final.js"></script>
+    <script type="module" src="mainjs.js"></script>
 </body>
 </html>
