--- a/finalwebsite/index.html
+++ b/finalwebsite/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="memes, funny images, meme descriptions, internet culture">
 
     <title>Memeology Mission Statement</title>
-    <link rel="stylesheet" href="ms.css">
+    <link rel="stylesheet" href="CSS/ms.css">
 </head>
 <body>
     <header>
@@ -33,6 +33,6 @@
         </div>
         <p>&copy; Brian Ritchie 2024</p>
     </footer>
-    <script type="module" src="mainjs.js"></script>
+    <script type="module" src="scripts/mainjs.js"></script>
 </body>
 </html>
