--- a/finalwebsite/index2.html
+++ b/finalwebsite/index2.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Brian Ritchie">
     <meta name="keywords" content="memes, funny images, meme descriptions, internet culture">
     <title>Memeology</title>
-    <link rel="stylesheet" href="final.css">
+    <link rel="stylesheet" href="CSS/final.css">
 </head>
 <body>
     <header>
@@ -33,6 +33,6 @@
         </div>
         <p>&copy; Brian Ritchie 2024</p>
     </footer>
-    <script type="module" src="final.js"></script>
+    <script type="module" src="scripts/final.js"></script>
 </body>
 </html>
